--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
     <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
     <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
-    <img src="\Images\table.png">
+    <img src="/Images/table.png">
 </body>
 </html>
