Added button to css

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
     <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
     <img src="/Images/table.png">
+    <button type="button">Click Me!</button> 
 </body>
+
 </html>
