Added a tab to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<div class="tab">
+    <button class="tablinks" onclick="openContact(event, 'Contacts')">Contacts</button>
+
+
+</div>
+
+<div id="Contacts" class="tabcontent">
+    <h3>Contacts</h3>
+    <p>This is my contacts page</p>
+</div>
+
 <body>
     <h1>Thomas Billett</h1>
     <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
@@ -14,5 +27,6 @@
     <img src="/Images/table.png">
     <button type="button">Click Me!</button> 
 </body>
+
 
 </html>
