Tried using a tab to link to another url

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <div class="tab">
-    <button class="tablinks" onclick="openContact(event, 'Contacts')">Contacts</button>
+    <button1 class="tablinks" ="google.com'">Google</button>
 
 
 </div>
