--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
     <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
     <img src="/Images/table.png">
-    <button type="button">Click Me!</button> 
+    <button onclick="https://www.w3schools.com/howto/howto_js_tabs.asp">Click Me!</button> 
+    <button onclick="google.com">HTML Tutorial</button>
+
 </body>
 
 
