--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
-
-<div class="tab">
-    <button1 class="tablinks" ="google.com'">Google</button1>
-
-
-</div>
-
-<div id="Contacts" class="tabcontent">
-    <h3>Contacts</h3>
-    <p>This is my contacts page</p>
-</div>
+<div class="sidenav">
+    <a href="#">Home</a>
+    <a href="#">About Me</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
+  </div>
 
 <body>
     <h1>Thomas Billett</h1>
@@ -30,7 +26,6 @@
     <img src="/Images/table.png">
     <button onclick="https://www.w3schools.com/howto/howto_js_tabs.asp">Click Me!</button> 
     <button1 onclick="google.com">HTML Tutorial</button1>
-    <button
 
 </body>
 
