Added div for different classes

--- a/index.html
+++ b/index.html
@@ -12,22 +12,44 @@
 </head>
 
 <div class="sidenav">
-    <a href="#">Home</a>
-    <a href="#">About Me</a>
-    <a href="#">Projects</a>
-    <a href="#">Contact</a>
-  </div>
+    <a href="home">Home</a>
+    <a href="about-me">About Me</a>
+    <a href="projects">Projects</a>
+    <a href="contact">Contact</a>
+</div>
 
-<body>
-    <h1>Thomas Billett</h1>
-    <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
-    <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
-    <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
-    <img src="/Images/table.png">
-    <button onclick="https://www.w3schools.com/howto/howto_js_tabs.asp">Click Me!</button> 
-    <button1 onclick="google.com">HTML Tutorial</button1>
+<div class="home">
+    <body>
+        <h1>Thomas Billett</h1>
+        <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
+        <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
+        <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
+        <img src="/Images/table.png">
+        <button onclick="https://www.w3schools.com/howto/howto_js_tabs.asp">Click Me!</button> 
+        <button1 onclick="google.com">HTML Tutorial</button1>
+    </body>
+</div>
 
-</body>
+<div class="about-me">
+    <body>
+        <h1>This is about me</h1>
+        <p>I'm really cool</p>
+    </body>
+</div>    
+
+<div class="projects">
+    <body>
+        <h1>Projects</h1>
+        <p>What I've worked on</p>
+    </body>
+</div>    
+
+<div class="contact">
+    <body>
+        <h1>Cobtact</h1>
+        <p>Where you can contact me</p>
+    </body>
+</div>   
 
 
 </html>
