--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <div class="sidenav">
-    <a href="home">Home</a>
-    <a href="about-me">About Me</a>
-    <a href="projects">Projects</a>
-    <a href="contact">Contact</a>
+    <a class="home">Home</a>
+    <a class="about-me">About Me</a>
+    <a class="projects">Projects</a>
+    <a class="contact">Contact</a>
 </div>
 
 <div class="home">
