Tried to add / to link different pages

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <div class="sidenav">
-    <a class="home">Home</a>
-    <a class="about-me">About Me</a>
-    <a class="projects">Projects</a>
-    <a class="contact">Contact</a>
+    <a href="home">Home</a>
+    <a href="about-me">About Me</a>
+    <a href="projects">Projects</a>
+    <a href="contact">Contact</a>
 </div>
 
-<div class="home">
+<div class="/home">
     <body>
         <h1>Thomas Billett</h1>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
@@ -30,21 +30,21 @@
     </body>
 </div>
 
-<div class="about-me">
+<div class="/about-me">
     <body>
         <h1>This is about me</h1>
         <p>I'm really cool</p>
     </body>
 </div>    
 
-<div class="projects">
+<div class="/projects">
     <body>
         <h1>Projects</h1>
         <p>What I've worked on</p>
     </body>
 </div>    
 
-<div class="contact">
+<div class="/contact">
     <body>
         <h1>Cobtact</h1>
         <p>Where you can contact me</p>
