Changed class to nav and added # to references

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 </head>
 
-<div class="sidenav">
-    <a href="home">Home</a>
-    <a href="about-me">About Me</a>
-    <a href="projects">Projects</a>
-    <a href="contact">Contact</a>
-</div>
+<nav class="sidenav">
+    <a href="#home">Home</a>
+    <a href="#about-me">About Me</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+</nav>
 
 <div class="/home">
     <body>
