Changed div classes to #'name'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="#contact">Contact</a>
 </nav>
 
-<div class="/home">
+<div class="#home">
     <body>
         <h1>Thomas Billett</h1>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
@@ -30,21 +30,21 @@
     </body>
 </div>
 
-<div class="/about-me">
+<div class="#about-me">
     <body>
         <h1>This is about me</h1>
         <p>I'm really cool</p>
     </body>
 </div>    
 
-<div class="/projects">
+<div class="#projects">
     <body>
         <h1>Projects</h1>
         <p>What I've worked on</p>
     </body>
 </div>    
 
-<div class="/contact">
+<div class="#contact">
     <body>
         <h1>Cobtact</h1>
         <p>Where you can contact me</p>
