--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="#home">Home</a>
     <a href="#about-me">About Me</a>
     <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
+    <a href="contact.html">Contact</a>
 </nav>
 
 <div class="#home">
@@ -43,13 +43,6 @@
         <p>What I've worked on</p>
     </body>
 </div>    
-
-<div class="#contact">
-    <body>
-        <h1>Cobtact</h1>
-        <p>Where you can contact me</p>
-    </body>
-</div>   
 
 
 </html>
