--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
         <body>
             <h1>Contact</h1>
             <p>Where you can contact me</p>
+
+            <button1 onclick="index.html">Home</button1>
         </body>
     </div>   
 </head>
