Changed button to work with link

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <h1>Contact</h1>
             <p>Where you can contact me</p>
 
-            <button1 onclick="index.html">Home</button1>
+            <button1 onclick="location.href='index.html'" type="button">Home</button1>               
         </body>
     </div>   
 </head>
