--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index style.css">
 
 </head>
 
 <nav class="sidenav">
-    <a href="#home">Home</a>
-    <a href="#about-me">About Me</a>
-    <a href="#projects">Projects</a>
+    <a href="index.html">Home</a>
+    <a href="about-me.html">About Me</a>
+    <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
 </nav>
 
