Linked appripriate css file to html page

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="contact style.css">
 
-    <div class="#contact">
+    <div class="contact">
         <body>
             <h1>Contact</h1>
             <p>Where you can contact me</p>
