--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav class="sidenav">
     <a href="index.html">Home</a>
     <a href="about-me.html">About Me</a>
-    <a href="projects.html">Projects</a>
+    <a href="project.html">Projects</a>
     <a href="contact.html">Contact</a>
 </nav>
 
