Tried splitting page into 3 columns

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <a href="contact.html">Contact</a>
 </nav>
 
-<div class="#home">
+<div id="left"></div>
+<div id="right"></div>
+
+<div class="main">
     <body>
         <h1>Thomas Billett</h1>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
