Copied main style into all css files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="left"></div>
 <div id="right"></div>
 
-<div class="main">
+<div id="main">
     <body>
         <h1>Thomas Billett</h1>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
@@ -30,6 +30,7 @@
         <img src="/Images/table.png">
         <button onclick="https://www.w3schools.com/howto/howto_js_tabs.asp">Click Me!</button> 
         <button1 onclick="google.com">HTML Tutorial</button1>
+        <button2 onclick="location.href='https://www.youtube.com/'" type="button">Youtube</button2>    
     </body>
 </div>
 
