--- a/project.html
+++ b/project.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="project style.css">
 
-    <div class="projects">
+    <div id="main">
         <body>
             <h1>Projects</h1>
-            <p>What I've worked on</p>
+            <p>What I have worked on</p>
         </body>
-    </div>    
+    </div>
     
 </head>
