Decided to merge all css files into one

--- a/about-me.html
+++ b/about-me.html
@@ -4,12 +4,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="about-me.css">
-
-    <div class="#about-me">
-        <body>
-            <h1>This is about me</h1>
-            <p>I'm really cool</p>
-        </body>
-    </div>    
+    <link rel="stylesheet" href="style.css">
 </head>
+
+<nav class="sidenav">
+    <a href="index.html">Home</a>
+    <a href="about-me.html">About Me</a>
+    <a href="project.html">Projects</a>
+    <a href="contact.html">Contact</a>
+</nav>
+
+<div id="left"></div>
+<div id="right"></div>
+
+<div class="#about-me">
+    <body>
+        <h1>This is about me</h1>
+        <p>I'm really cool</p>
+    </body>
+</div>    
+
+</html>
