--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="contact style.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<nav class="sidenav">
+    <a href="index.html">Home</a>
+    <a href="about-me.html">About Me</a>
+    <a href="project.html">Projects</a>
+    <a href="contact.html">Contact</a>
+</nav>
+
+<div id="left"></div>
+<div id="right"></div>
 
     <div class="contact">
         <body>
@@ -14,4 +25,4 @@
             <button1 onclick="location.href='index.html'" type="button">Home</button1>               
         </body>
     </div>   
-</head>
+</html>
