--- a/project.html
+++ b/project.html
@@ -4,13 +4,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="project style.css">
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<nav class="sidenav">
+    <a href="index.html">Home</a>
+    <a href="about-me.html">About Me</a>
+    <a href="project.html">Projects</a>
+    <a href="contact.html">Contact</a>
+</nav>
+
+<div id="left"></div>
+<div id="right"></div>
+
+
+<body>
     <div id="main">
         <body>
             <h1>Projects</h1>
             <p>What I have worked on</p>
         </body>
     </div>
-    
-</head>
+</body>
+
+</html>   
