Aligned navigation bar correctly with rest of page

--- a/about-me.html
+++ b/about-me.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<nav class="sidenav">
-    <a href="index.html">Home</a>
-    <a href="about-me.html">About Me</a>
-    <a href="project.html">Projects</a>
-    <a href="contact.html">Contact</a>
-</nav>
+<div class="sidenav-alignment">
+    <nav class="sidenav">
+        <a href="index.html">Home</a>
+        <a class="active" href="about-me.html">About Me</a>
+        <a href="project.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</div>
 
-<div id="left"></div>
-<div id="right"></div>
-
-<div class="#about-me">
+<div id="main">
     <body>
         <h1>This is about me</h1>
         <p>I'm really cool</p>
