--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<nav class="sidenav">
-    <a href="index.html">Home</a>
-    <a href="about-me.html">About Me</a>
-    <a href="project.html">Projects</a>
-    <a href="contact.html">Contact</a>
-</nav>
+<div class="sidenav-alignment">
+    <nav class="sidenav">
+        <a href="index.html">Home</a>
+        <a href="about-me.html">About Me</a>
+        <a href="project.html">Projects</a>
+        <a class="active"  href="contact.html">Contact</a>
+    </nav>
+</div>
 
-<div id="left"></div>
-<div id="right"></div>
-
-    <div class="contact">
+    <div id="main">
         <body>
             <h1>Contact</h1>
             <p>Where you can contact me</p>
