--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
-<nav class="sidenav">
-    <a href="index.html">Home</a>
-    <a href="about-me.html">About Me</a>
-    <a href="project.html">Projects</a>
-    <a href="contact.html">Contact</a>
-</nav>
+<div class="sidenav-alignment">
+    <nav class="sidenav">
+        <a class="active" href="index.html">Home</a>
+        <a href="about-me.html">About Me</a>
+        <a href="project.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</div>
 
-<div id="left"></div>
-<div id="right"></div>
 
 <div id="main">
     <body>
