--- a/project.html
+++ b/project.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<nav class="sidenav">
-    <a href="index.html">Home</a>
-    <a href="about-me.html">About Me</a>
-    <a href="project.html">Projects</a>
-    <a href="contact.html">Contact</a>
-</nav>
-
-<div id="left"></div>
-<div id="right"></div>
-
+<div class="sidenav-alignment">
+    <nav class="sidenav">
+        <a href="index.html">Home</a>
+        <a href="about-me.html">About Me</a>
+        <a class="active"  href="project.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</div>
 
 <body>
     <div id="main">
