Created title for h1 tag for each website tab

--- a/about-me.html
+++ b/about-me.html
@@ -18,6 +18,9 @@
 
 <div id="main">
     <body>
+        <div id=title>
+            <h1><center>About Me</center></h1>
+        </div>
         <h1>This is about me</h1>
         <p>I'm really cool</p>
     </body>
