--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,9 @@
 
     <div id="main">
         <body>
-            <h1>Contact</h1>
-            <p>Where you can contact me</p>
+            <div id=title>
+                <h1><center>Contact</center></h1>
+            </div>
 
             <button1 onclick="location.href='index.html'" type="button">Home</button1>               
         </body>
