--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
 <div id="main">
     <body>
-        <h1>Thomas Billett</h1>
+        <div id=title>
+            <h1><center>Thomas Billett</center></h1>
+            <h2><center>Student Developer</h2></center>
+        </div>
+        
+        <hr>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
