--- a/project.html
+++ b/project.html
@@ -19,8 +19,9 @@
 <body>
     <div id="main">
         <body>
-            <h1>Projects</h1>
-            <p>What I have worked on</p>
+            <div id=title>
+                <h1><center>Projects</center></h1>
+            </div>
         </body>
     </div>
 </body>
