--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
         <p>Lorem ipsum dolor sit amet conectetur adipisicing elit</p>
-        <img src="/Images/table.png">
+        <!-- <img src="/Images/table.png"> -->
         <button onclick="https://www.w3schools.com/howto/howto_js_tabs.asp">Click Me!</button> 
         <button1 onclick="google.com">HTML Tutorial</button1>
         <button2 onclick="location.href='https://www.youtube.com/'" type="button">Youtube</button2>    
