--- a/about-me.html
+++ b/about-me.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<div class="sidenav-alignment">
-    <nav class="sidenav">
+<div class="topnav-alignment">
+    <nav class="topnav">
         <a href="index.html">Home</a>
         <a class="active" href="about-me.html">About Me</a>
         <a href="project.html">Projects</a>
