--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<div class="sidenav-alignment">
-    <nav class="sidenav">
+<div class="topnav-alignment">
+    <nav class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="about-me.html">About Me</a>
         <a href="project.html">Projects</a>
