--- a/about-me.html
+++ b/about-me.html
@@ -19,7 +19,7 @@
 <div id="main">
     <body>
         <div id=title>
-            <h1><center>About Me</center></h1>
+            <h1><center>Thomas Billett</center></h1>
         </div>
         <hr>
         <h1>This is about me</h1>
