--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,24 @@
     </nav>
 </div>
 
+<body>
     <div id="main">
-        <body>
+        
             <div id=title>
                 <h1><center>Contact</center></h1>
             </div>
+
             <hr>
-            <button1 onclick="location.href='index.html'" type="button">Home</button1>               
-        </body>
-    </div>   
-</html>
+            <!-- Link below does not open in a new tab  -->
+            <div id="smalltitle">
+                <h1><center>      
+                <a href="mailto:thomas@billett.org.uk? subject=subject text" target="_blank" rel="noopener noreferrer">Email</a> /
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a> /
+                <a href="https://github.falmouth.ac.uk/TB246112" target="_blank" rel="noopener noreferrer">Github</a> /
+                <a href="https://uk.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                </h1></center>  
+            </div>  
+    </div>
+</body>   
+
+</html> 
