Adjusted images, messed around with aligning images to certain parts of the page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="about-me.html">About Me</a>
-        <a href="project.html">Projects</a>
+        <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </nav>
 </div>
@@ -34,11 +34,24 @@
             <hr>
             <br>
 
-            <div id="smalltitle">
-                <h1>Dissertation</h1>
+            <div id="smalltitle" class="alignleft">
+                <h1>Me</h1>
                 <div id="image">
+                    <img src="Images/MachineLearning.jpeg" class="circle" alt="AI Page"  width=”500″ height=”600″>
+                </div>
+            </div>
+
+            <br>
+            <hr>
+            <br>
+
+            <div id="smalltitle">
+                <h1>
+                    <span class="aligncenter">Dissertation</span>
+                </h1>
+                <div id="image" class="aligncenter">
                 <a href="Projects/Dissertation.html">
-                    <img src="Images/pic_trulli2.jpg" alt="AI Page" width=”500″ height=”600″>
+                    <img src="Images/pic_trulli2.jpg" class="interactable" alt="AI Page" width=”500″ height=”600″>
                 </a> 
                 </div>
             </div>
@@ -50,14 +63,14 @@
 
             <div id="smalltitle">
                 <h1>The Penumbra</h1>
-                <div id="image">
+                <div id="image" class="aligncenter">
                     <a href="https://tbillett.itch.io/the-penumbra"target="_blank" rel="noopener noreferrer">
-                        <img src="Images/penumbra.png" alt="AI Page">
+                        <img src="Images/penumbra.png" class="interactable" alt="AI Page">
                     </a> 
                 </div>
-                <div class="box blue"></div> 
+                <!-- <div class="box blue"></div> 
                 <div class="box purple"></div> 
-                <div class="box"></div> 
+                <div class="box"></div>  -->
 
             </div>
         
