--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <nav class="topnav">
         <a href="index.html">Home</a>
         <a href="about-me.html">About Me</a>
-        <a href="project.html">Projects</a>
+        <a href="portfolio.html">Portfolio</a>
         <a class="active"  href="contact.html">Contact</a>
     </nav>
 </div>
