--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <nav class="topnav">
         <a href="index.html">Home</a>
         <a href="about-me.html">About Me</a>
-        <a class="active"  href="project.html">Projects</a>
+        <a class="active"  href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </nav>
 </div>
@@ -20,7 +20,7 @@
     <div id="main">
         <body>
             <div id=title>
-                <h1><center>Projects</center></h1>
+                <h1><center>Portfolio</center></h1>
             </div>
             <hr>
         </body>
