Started to work on website again

--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
         
             <div id=title>
                 <h1><center>Thomas Billett</center></h1>
-                <h2><center>Student Developer</h2></center>
+                <h2><center>Graduate Developer</h2></center>
             </div>
 
             <br>
             <hr>
             <br>
+
+            <div id="smalltitle">
+                <h1>Solar Spark</h1>
+                <div id="image" class="aligncenter">
+                    <a href="https://calicatgamesstudio.itch.io/solar-spark"target="_blank" rel="noopener noreferrer">
+                        <img src="Images/SolarSparkLogo.png" class="interactable" alt="AI Page">
+                    </a> 
+                </div>
+            </div>
 
             <div id="smalltitle" class="alignleft">
                 <h1>Me</h1>
@@ -68,11 +77,8 @@
                         <img src="Images/penumbra.png" class="interactable" alt="AI Page">
                     </a> 
                 </div>
-                <!-- <div class="box blue"></div> 
-                <div class="box purple"></div> 
-                <div class="box"></div>  -->
-
             </div>
+
         
     </div>
 </body>
