--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,21 @@
             </div>
 
             <hr>
-            <!-- Link below does not open in a new tab  -->
-            <div id="smalltitle">
-                <h1><center>
-                <a href="mailto:thomas@billett.org.uk? subject=subject text" target="_blank" rel="noopener noreferrer">Email</a> /
-                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a> /
-                <a href="https://github.falmouth.ac.uk/TB246112" target="_blank" rel="noopener noreferrer">Github</a> /
-                <a href="https://uk.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                </h1></center>  
+            <div class="contacts">
+                <center>
+                <a href="mailto:thomas@billett.org.uk? subject=subject text" target="_blank" rel="noopener noreferrer">
+                    <button class="button rounded">Email</button>
+                </a>
+                <a href="https://twitter.com/"  target="_blank" rel="noopener noreferrer">
+                    <button>Twitter</button>
+                </a>
+                <a href="https://github.falmouth.ac.uk/TB246112" target="_blank" rel="noopener noreferrer">
+                    <button>Github</button>                       
+                </a> 
+                <a href="https://www.linkedin.com/in/thomas-billett-3b9468256/" target="_blank" rel="noopener noreferrer">
+                    <button>LinkedIn</button>
+                </a> 
+                </center>  
             </div>  
     </div>
 </body>   
