Changed divs to classes

--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -9,7 +9,7 @@
 
 <div class="topnav-alignment">
     <nav class="topnav">
-        <a class="active" href="../index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="../about-me.html">About Me</a>
         <a href="../project.html">Projects</a>
         <a href="../contact.html">Contact</a>
@@ -17,15 +17,14 @@
 </div>
 
 <body>
-    <div id="main">
-        
-            <div id=title>
+    <div class="main">      
+            <div class=title>
                 <h1><center>Thomas Billett</center></h1>
                 <h2><center>Student Developer</h2></center>
             </div>
             
             <hr>
-            <div id="smalltitle">
+            <div class="smalltitle">
                 <h1>Dissertation</h1>
                 <h2>Computing Artifact</h2>
 
