--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 </div>
 
 <body>
-    <div id="main">
+    <div class="main">
         
-            <div id=title>
+            <div class=title>
                 <h1><center>Contact</center></h1>
             </div>
 
