--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <!-- Root of the HTML document -->
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,12 +21,9 @@
 </div>
 
 <body>
-
     <!-- <img src="Images/penumbra.png" alt="AI Page" width=”500″ height=”600″> -->
-
-    <div id="main">
-        
-            <div id=title>
+    <div class="main">        
+            <div class=title>
                 <h1><center>Thomas Billett</center></h1>
                 <h2><center>Graduate Developer</h2></center>
             </div>
@@ -34,16 +32,25 @@
             <hr>
             <br>
 
-            <div id="smalltitle">
+            <div class="smalltitle">
+                <h1>Welcome to my website</h1>
+                <h2>Hello I am Thomas Billett a recent student graduate from Falmouth University.</h2>
+            </div>
+
+            <br>
+            <hr>
+            <br>
+
+            <div class="smalltitle">
                 <h1>Solar Spark</h1>
                 <div id="image" class="aligncenter">
-                    <a href="https://calicatgamesstudio.itch.io/solar-spark"target="_blank" rel="noopener noreferrer">
+                    <a href="Projects/SolarSpark.html">
                         <img src="Images/SolarSparkLogo.png" class="interactable" alt="AI Page">
                     </a> 
                 </div>
             </div>
 
-            <div id="smalltitle" class="alignleft">
+            <div class="smalltitle" class="alignleft">
                 <h1>Me</h1>
                 <div id="image">
                     <img src="Images/MachineLearning.jpeg" class="circle" alt="AI Page"  width=”500″ height=”600″>
@@ -54,7 +61,7 @@
             <hr>
             <br>
 
-            <div id="smalltitle">
+            <div class="smalltitle">
                 <h1>
                     <span class="aligncenter">Dissertation</span>
                 </h1>
@@ -70,7 +77,7 @@
             <hr>
             <br>
 
-            <div id="smalltitle">
+            <div class="smalltitle">
                 <h1>The Penumbra</h1>
                 <div id="image" class="aligncenter">
                     <a href="https://tbillett.itch.io/the-penumbra"target="_blank" rel="noopener noreferrer">
