--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
 </div>
 
 <body>
-    <div id="main">
+    <div class="main">
         <body>
-            <div id=title>
+            <div class="title">
                 <h1><center>Portfolio</center></h1>
             </div>
             <hr>
