Renamed some css classes, began creation of Solar Spark page

--- a/about-me.html
+++ b/about-me.html
@@ -28,7 +28,7 @@
     <hr>
     <br>
 
-    <div class="smalltitle" class="alignleft">
+    <div class="smallbox" class="alignleft">
 
         
         <h1>Me</h1>
