--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <div class=title>
                 <h1><center>Thomas Billett</center></h1>
                 <h2><center>Graduate Developer</h2></center>
-            </div>
+            </div>s
 
             <br>
             
             <hr>
             <br>
 
-            <div class="smalltitle">
+            <div class="smallbox">
                 <h1>Welcome to my website</h1>
                 <h2>Hello I am Thomas Billett a recent student graduate from Falmouth University.</h2>
             </div>
@@ -42,7 +42,7 @@
             <hr>
             <br>
 
-            <div class="smalltitle">
+            <div class="smallbox">
                 <h1>Solar Spark</h1>
                 <div id="image" class="aligncenter">
                     <a href="Projects/SolarSpark.html">
@@ -55,7 +55,7 @@
             <hr>
             <br>
 
-            <div class="smalltitle">
+            <div class="smallbox">
                 <h1>
                     <span class="aligncenter">Dissertation</span>
                 </h1>
@@ -71,7 +71,7 @@
             <hr>
             <br>
 
-            <div class="smalltitle">
+            <div class="smallbox">
                 <h1>The Penumbra</h1>
                 <div id="image" class="aligncenter">
                     <a href="https://tbillett.itch.io/the-penumbra"target="_blank" rel="noopener noreferrer">
