--- a/contact.html
+++ b/contact.html
@@ -26,18 +26,19 @@
             <hr>
             <div class="contacts">
                 <center>
-                <a href="mailto:thomas@billett.org.uk? subject=subject text" target="_blank" rel="noopener noreferrer">
-                    <button class="button rounded">Email</button>
-                </a>
-                <a href="https://twitter.com/"  target="_blank" rel="noopener noreferrer">
-                    <button>Twitter</button>
-                </a>
-                <a href="https://github.falmouth.ac.uk/TB246112" target="_blank" rel="noopener noreferrer">
-                    <button>Github</button>                       
-                </a> 
                 <a href="https://www.linkedin.com/in/thomas-billett-3b9468256/" target="_blank" rel="noopener noreferrer">
                     <button>LinkedIn</button>
                 </a> 
+                <a href="mailto:thomas@billett.org.uk? subject=subject text" target="_blank" rel="noopener noreferrer">
+                    <button>Email</button>
+                </a>
+                <!-- <a href="https://twitter.com/"  target="_blank" rel="noopener noreferrer">
+                    <button>Twitter</button>
+                </a> -->
+                <a href="https://github.falmouth.ac.uk/TB246112" target="_blank" rel="noopener noreferrer">
+                    <button>Github</button>                       
+                </a> 
+
                 </center>  
             </div>  
     </div>
