Removed random s and changed github to correct link

--- a/about-me.html
+++ b/about-me.html
@@ -28,13 +28,9 @@
     <hr>
     <br>
 
-    <div class="smallbox" class="alignleft">
-
-        
+    <div class="smallbox">
         <h1>Me</h1>
-        <div class="image">
-
-            
+        <div class="image">       
             <img src="Images/MachineLearning.jpeg" class="circle" alt="AI Page"  width=”500″ height=”600″>
         </div>
     </div>
