--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                 <!-- <a href="https://twitter.com/"  target="_blank" rel="noopener noreferrer">
                     <button>Twitter</button>
                 </a> -->
-                <a href="https://github.falmouth.ac.uk/TB246112" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/LooseCann0n" target="_blank" rel="noopener noreferrer">
                     <button>Github</button>                       
                 </a> 
 
