--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class=title>
                 <h1><center>Thomas Billett</center></h1>
                 <h2><center>Graduate Developer</h2></center>
-            </div>s
+            </div>
 
             <br>
             
