Moved portfolio pieces onto the Portfolio page, began adding trailers and content

--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -13,7 +13,7 @@
         var player = new YT.Player('player', {
           height: '540',
           width: '1000',
-          videoId: 'qgrneknSSBU',
+          videoId: 'RPqrLZZzWc0',
         });
       }
     </script>
@@ -42,7 +42,7 @@
 
 
             <div class="smallbox l">
-                <h1>Solar Spark - CaliCat Studios 
+                <h1>The Penumbra - CitraLux Studios
                     <a href="../portfolio.html" target="_blank">
                         <button class = "backbutton">Back</button>
                     </a>
