--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,45 @@
                 <h1><center>Portfolio</center></h1>
             </div>
             <hr>
+
+            <div class="smallbox">
+                <h1>Solar Spark</h1>
+                <div id="image" class="aligncenter">
+                    <a href="Projects/SolarSpark.html">
+                        <img src="Images/SolarSparkLogo.png" class="interactable" alt="AI Page">
+                    </a> 
+                </div>
+            </div>
+
+            <br>
+            <hr>
+            <br>
+
+            <div class="smallbox">
+                <h1>
+                    <span class="aligncenter">Dissertation</span>
+                </h1>
+                <div id="image" class="aligncenter">
+                <a href="Projects/Dissertation.html">
+                    <img src="Images/pic_trulli2.jpg" class="interactable" alt="AI Page" width=”500″ height=”600″>
+                </a> 
+                </div>
+            </div>
+            
+
+            <br>
+            <hr>
+            <br>
+
+            <div class="smallbox">
+                <h1>The Penumbra</h1>
+                <div id="image" class="aligncenter">
+                    <a href="Projects/Penumbra.html"target="_blank" rel="noopener noreferrer">
+                        <img src="Images/penumbra.png" class="interactable" alt="AI Page">
+                    </a> 
+                </div>
+            </div>
+
         </body>
     </div>
 </body>
