--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -43,7 +43,7 @@
 
             <div class="smallbox l">
                 <h1>The Penumbra - CitraLux Studios
-                    <a href="../portfolio.html" target="_blank">
+                    <a href="../portfolio.html#penumbra-anchor">
                         <button class = "backbutton">Back</button>
                     </a>
                 </h1>
