--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -43,7 +43,7 @@
 
             <div class="smallbox l">
                 <h1>Solar Spark - CaliCat Studios 
-                    <a href="../portfolio.html" target="_blank">
+                    <a href="../portfolio.html">
                         <button class = "backbutton">Back</button>
                     </a>
                 </h1>
