--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
             </div>
             <hr>
 
+
             <div class="smallbox">
                 <h1>Solar Spark</h1>
                 <div id="image" class="aligncenter">
@@ -37,13 +38,14 @@
             <hr>
             <br>
 
+            <a id="dissertation-anchor"></a>
             <div class="smallbox">
                 <h1>
                     <span class="aligncenter">Dissertation</span>
                 </h1>
                 <div id="image" class="aligncenter">
                 <a href="Projects/Dissertation.html">
-                    <img src="Images/pic_trulli2.jpg" class="interactable" alt="AI Page" width=”500″ height=”600″>
+                    <img src="Images/TutorialScreenshot.png" class="interactable" alt="AI Page" width=”500″ height=”600″>
                 </a> 
                 </div>
             </div>
@@ -53,6 +55,7 @@
             <hr>
             <br>
 
+            <a id="penumbra-anchor"></a>
             <div class="smallbox">
                 <h1>The Penumbra</h1>
                 <div id="image" class="aligncenter">
