Fixed embed video scaling

--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -11,8 +11,8 @@
       // Create a YouTube player when the API is ready
       function onYouTubeIframeAPIReady() {
         var player = new YT.Player('player', {
-          height: '540',
-          width: '1000',
+          height: '100%',
+          width: '100%',
           videoId: 'RPqrLZZzWc0',
         });
       }
