--- a/Projects/Dissertation.html
+++ b/Projects/Dissertation.html
@@ -8,16 +8,15 @@
 
     <script src="https://www.youtube.com/iframe_api"></script>
     <script>
-      // Create a YouTube player when the API is ready
-      function onYouTubeIframeAPIReady() {
+    // Create a YouTube player when the API is ready
+    function onYouTubeIframeAPIReady() {
         var player = new YT.Player('player', {
-          height: '540',
-          width: '1000',
-          videoId: '4f8x1sx2xSQ',
+        height: '100%',
+        width: '100%',
+        videoId: '4f8x1sx2xSQ',
         });
-      }
+    }
     </script>
-
 </head>
 
 <div class="topnav-alignment">
@@ -55,7 +54,9 @@
                     <li>LaTeX</li>
                 </div>
 
-                <div id="player"></div>
+                <div class="player-container">
+                    <div id="player"> </div>                 
+                </div>
                 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/qgrneknSSBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
 
             </div>
