Fixed Penumbra youtube player, fixed some mobile formatting

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
             <div class="smallbox">
                 <h1>The Penumbra</h1>
                 <div id="image" class="aligncenter">
-                    <a href="Projects/Penumbra.html"target="_blank" rel="noopener noreferrer">
+                    <a href="Projects/Penumbra.html">
                         <img src="Images/penumbra.png" class="interactable" alt="AI Page">
                     </a> 
                 </div>
