Added basic CV, fixed some button formatting issues

--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -23,7 +23,7 @@
 <div class="topnav-alignment">
     <nav class="topnav">
         <a href="../index.html">Home</a>
-        <a href="../about-me.html">About Me</a>
+        <a href="../about-me.html">CV</a>
         <a class="active" href="../portfolio.html">Portfolio</a>
         <a href="../contact.html">Contact</a>
     </nav>
