--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -22,7 +22,7 @@
 <div class="topnav-alignment">
     <nav class="topnav">
         <a href="../index.html">Home</a>
-        <a href="../about-me.html">About Me</a>
+        <a href="../about-me.html">CV</a>
         <a class="active" href="../portfolio.html">Portfolio</a>
         <a href="../contact.html">Contact</a>
     </nav>
@@ -51,7 +51,7 @@
 
                 <br>
 
-                <h2>2:1</h2>
+                <h2>Grade Awarded - 1st</h2>
 
                 <div class="skills">
                     <li>C#</li>
