--- a/about-me.html
+++ b/about-me.html
@@ -10,7 +10,7 @@
 <div class="topnav-alignment">
     <nav class="topnav">
         <a href="index.html">Home</a>
-        <a class="active" href="about-me.html">About Me</a>
+        <a class="active" href="about-me.html">CV</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -29,10 +29,13 @@
     <br>
 
     <div class="smallbox">
-        <h1>Me</h1>
-        <div class="image">       
-            <img src="Images/MachineLearning.jpeg" class="circle" alt="AI Page"  width=”500″ height=”600″>
-        </div>
+        <h1>Curriculum Vitae</h1>
+        <a href="Projects/Thomas Billett CV.pdf" target="_blank" rel="noopener noreferrer">
+            <button>Light CV</button>
+        </a> 
+        <a href="Projects/Thomas Billett CV Dark.pdf" target="_blank" rel="noopener noreferrer">
+            <button>Dark CV</button>
+        </a> 
     </div>
 
     
