--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <div class="topnav-alignment">
     <nav class="topnav">
         <a href="index.html">Home</a>
-        <a href="about-me.html">About Me</a>
+        <a href="about-me.html">CV</a>
         <a href="portfolio.html">Portfolio</a>
         <a class="active"  href="contact.html">Contact</a>
     </nav>
@@ -28,7 +28,6 @@
             <br>
 
             <div class="contacts">
-                <center>
                 <a href="https://www.linkedin.com/in/thomas-billett-3b9468256/" target="_blank" rel="noopener noreferrer">
                     <button>LinkedIn</button>
                 </a> 
@@ -42,7 +41,6 @@
                     <button>Github</button>                       
                 </a> 
 
-                </center>  
             </div>  
     </div>
 </body>   
