--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,12 @@
 <div class="topnav-alignment">
     <nav class="topnav">
         <a href="index.html">Home</a>
-        <a href="about-me.html">About Me</a>
+        <a href="about-me.html">CV</a>
         <a class="active"  href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </nav>
 </div>
+<footer class="footer">© 2023 Thomas Billett. All Rights Reseerved.</footer>
 
 <body>
     <div class="main">
