--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="topnav-alignment">
     <nav class="topnav">
         <a class="active" href="index.html">Home</a>
-        <a href="about-me.html">About Me</a>
+        <a href="about-me.html">CV</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </nav>
