Fixed CV button whitespace issue, experiemented with light mode toggle & root css class

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+    <script>
+        function myFunction() {
+           var element = document.body;
+           var title = document.title;
+           element.classList.toggle("light-mode");
+           title.classList.toggle("light-mode");
+        }
+        </script>
+
 </head>
 
 <div class="topnav-alignment">
@@ -19,12 +29,14 @@
         <a href="contact.html">Contact</a>
     </nav>
 </div>
+<footer class="footer">© 2023 Thomas Billett. All Rights Reseerved.</footer>
 
 <body>
     <!-- <img src="Images/penumbra.png" alt="AI Page" width=”500″ height=”600″> -->
     <div class="main">        
             <div class=title>
                 <h1><center>Thomas Billett</center></h1>
+                <!-- <button onclick="myFunction()">Toggle dark mode</button> -->
             </div>
 
             <br>
