--- a/about-me.html
+++ b/about-me.html
@@ -30,12 +30,14 @@
 
     <div class="smallbox">
         <h1>Curriculum Vitae</h1>
-        <a href="Projects/Thomas Billett CV.pdf" target="_blank" rel="noopener noreferrer">
-            <button>Light CV</button>
-        </a> 
-        <a href="Projects/Thomas Billett CV Dark.pdf" target="_blank" rel="noopener noreferrer">
-            <button>Dark CV</button>
-        </a> 
+        <div class="buttoncontainer">
+            <a href="Projects/Thomas Billett CV.pdf" target="_blank" rel="noopener noreferrer">
+                <button>Light CV</button>
+            </a>
+            <a href="Projects/Thomas Billett CV Dark.pdf" target="_blank" rel="noopener noreferrer">
+                <button>Dark CV</button>
+            </a>
+        </div>
     </div>
 
     
