--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
         <a class="active"  href="contact.html">Contact</a>
     </nav>
 </div>
+<footer class="footer">© 2023 Thomas Billett. All Rights Reseerved.</footer>
 
 <body>
     <div class="main">
@@ -27,7 +28,7 @@
             <hr>
             <br>
 
-            <div class="contacts">
+            <div class="buttoncontainer">
                 <a href="https://www.linkedin.com/in/thomas-billett-3b9468256/" target="_blank" rel="noopener noreferrer">
                     <button>LinkedIn</button>
                 </a> 
