Updated css files, changed colours to use root. Fixed some scaling issues on mobile

--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/contact.css">
+    <link rel="stylesheet" href="../CSS/projects.css">
     <link rel="stylesheet" href="../CSS/colours.css">
     <link rel="stylesheet" href="../CSS/contentboxes.css">
     <link rel="stylesheet" href="../CSS/global.css">
@@ -70,7 +70,7 @@
 
                 <h2>Introduction</h2>
 
-                <p class = "description">
+                <p class="description">
                     Embark on an extraordinary journey where SolarPunk meets Ancient Egyptian Mythology. As the exiled queen, Eset, you will be thrust into an epic quest to revive your beloved Osiris and topple the ruinous powers of the Desert King, Set.
                     <br>
                     This single-player action-adventure game offers exploration, mind-bending puzzles, and intense combat. With a stylized art direction, you will fall in love with the awe-inspiring landscapes and rich narrative you come across throughout your journey.
@@ -78,11 +78,23 @@
                 <div class="itch-container">
                     <iframe src="https://itch.io/embed/1939160?dark=true" width="552" height="167" frameborder="0"><a href="https://calicatgamesstudio.itch.io/solar-spark">Solar Spark by CaliCat Games Studio</a></iframe>
                 </div>
+
+                <p class="description">
+                    Solar Spark was created in my final year at Falmouth University and definitely the project I am most proud of. The main selling points of our game were the combat, story and exploration. During the project I worked on enemy AI,
+                    UI and camera.
+                </p>
             </div>
 
             <br>
             <hr>
-            <br>   
+            <br>
+            
+            <div class="smallbox l">
+                <h2>Camera</h2>
+                <p class="description">
+                    
+                </p>
+            </div>
     </div>
 </body>
 
