--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <a class="active"  href="contact.html">Contact</a>
     </nav>
 </div>
-<footer class="footer">© 2023 Thomas Billett. All Rights Reseerved.</footer>
+<footer class="footer">© 2023 Thomas Billett. All Rights Reserved.</footer>
 
 <body>
     <div class="main">   
