--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <a href="contact.html">Contact</a>
     </nav>
 </div>
-<footer class="footer">© 2023 Thomas Billett. All Rights Reseerved.</footer>
+<footer class="footer">© 2023 Thomas Billett. All Rights Reserved.</footer>
 
 <body>
     <div class="main">
