--- a/Projects/Penumbra.html
+++ b/Projects/Penumbra.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/contact.css">
+    <link rel="stylesheet" href="../CSS/projects.css">
     <link rel="stylesheet" href="../CSS/colours.css">
     <link rel="stylesheet" href="../CSS/contentboxes.css">
     <link rel="stylesheet" href="../CSS/global.css">
@@ -40,7 +40,6 @@
     <div class="main">      
             <div class=title>
                 <h1><center>Thomas Billett</center></h1>
-                <h2><center>Graduate Developer</h2></center>
             </div>
             
             <br>
