Added further content to SolarSpark page

--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -68,7 +68,7 @@
                     <div id="player"></div>
                 </div>
 
-                <h2>Introduction</h2>
+                <h3>Introduction</h3>
 
                 <p class="description">
                     Embark on an extraordinary journey where SolarPunk meets Ancient Egyptian Mythology. As the exiled queen, Eset, you will be thrust into an epic quest to revive your beloved Osiris and topple the ruinous powers of the Desert King, Set.
@@ -80,9 +80,31 @@
                 </div>
 
                 <p class="description">
-                    Solar Spark was created in my final year at Falmouth University and definitely the project I am most proud of. The main selling points of our game were the combat, story and exploration. During the project I worked on enemy AI,
-                    UI and camera.
+                    Solar Spark was created in my final year at Falmouth University and definitely the project I am most proud of.
                 </p>
+            </div>
+
+            <br>
+            <hr>
+            <br>
+
+            <div class="smallbox l">
+                <h3>My Roles & Contributions</h3>
+                <b>
+                <p class="description">
+                    <ul><b>Lead Programmer:</b> </ul>
+                    <ul><b>AI Programmer:</b> This was my specialism in the project and where a large amount of my efforts were focused. Created AI systems for enemies
+                         </ul>
+
+                    <br>
+                    <ul><b>Enemy AI & Animations:</b> I created sword and axe enemy variant, hooked up animations and repurposed existing AI functionality
+                        to create the final boss.</ul>
+                    <ul><b>Menu System:</b></ul>
+                    <ul><b>Camera</b>:</ul>
+                    <ul><b>Recording</b>:</ul>
+                    <ul><b>Bugfixing:</b></ul>
+                </p>
+            </b>
             </div>
 
             <br>
@@ -90,10 +112,16 @@
             <br>
             
             <div class="smallbox l">
-                <h2>Camera</h2>
+                <h3>Camera</h3>
                 <p class="description">
-                    
+                    Since I had prior experience in creating a camera system I was chosen to make it. It would need to be fast and responsive, in align with the fast paced hack and slash combat system. We drew inspiration
+                    from games such as <i>Devil May Cry 5</i> and <i>NieR: Automata</i>.
                 </p>
+
+                <div class=".container">
+                    <img src="../Images/nier.jpg">
+                </div>
+
             </div>
     </div>
 </body>
