--- a/contact.html
+++ b/contact.html
@@ -35,21 +35,24 @@
         <hr>
         <br>
 
-        <div class="buttoncontainer">
-            <a href="https://www.linkedin.com/in/thomas-billett-3b9468256/" target="_blank" rel="noopener noreferrer">
-                <button>LinkedIn</button>
-            </a> 
-            <a href="mailto:thomas@billett.org.uk? subject=subject text" target="_blank" rel="noopener noreferrer">
-                <button>Email</button>
-            </a>
-            <!-- <a href="https://twitter.com/"  target="_blank" rel="noopener noreferrer">
-                <button>Twitter</button>
-            </a> -->
-            <a href="https://github.com/LooseCann0n" target="_blank" rel="noopener noreferrer">
-                <button>Github</button>                       
-            </a> 
-
-        </div>  
+        <div class="smallbox">
+            <div class="buttoncontainer">
+                <a href="https://www.linkedin.com/in/thomas-billett-3b9468256/" target="_blank" rel="noopener noreferrer">
+                    <button>LinkedIn</button>
+                </a> 
+                <a href="mailto:thomas@billett.org.uk? subject=subject text" target="_blank" rel="noopener noreferrer">
+                    <button>Email</button>
+                </a>
+                <!-- <a href="https://twitter.com/"  target="_blank" rel="noopener noreferrer">
+                    <button>Twitter</button>
+                </a> -->
+                <a href="https://github.com/LooseCann0n" target="_blank" rel="noopener noreferrer">
+                    <button>Github</button>                       
+                </a> 
+    
+            </div>  
+        </div>
+        
     </div>
 </body>   
 
